## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with M2-Planet.  If not, see <http://www.gnu.org/licenses/>.

* Current
** Added
Added test for chdir and getcwd family of posix primitives

** Changed

** Fixed
AArch64 wasteful stack

** Removed

* 1.5 - 2020-02-01
** Added
Added support for \a and \b
Added support for long
Added support for size_t
Added support for ssize_t
Added support for const keyword
Added support for alternate instructions for signed/unsigned combinations
Added is_signed data to all types
Added support for signed multiplication, division and modulus
Added dist build target
Added a manpage for M2-Planet
Added support for nested structs thanks to fosslinux
Added support for access, chdir and fchdir primitives
Added AArch64 target (mescc-tools 0.7.0 required), all tests passing but rough on the edges
Added require support to reduce number of segfaults possible
Added first pass error checking in primitives
Added first knight-native cc-minimal.c

** Changed
Reordered types to prefer longs over unsigned over ints or chars
Replaced NOP with NULL to better match what it is really ment.
Enabled large binary support in knight-native

** Fixed
Typo: Recieved -> Received
ARMv7l elf-header regression
Corrected AMD64's xchg rax, rbx into it's proper encoding
A great deal of typos thanks to Andrius Štikonas
Regression in numerate_number
Segfault found in build_member when passed a non-number
Segfault found in tokenizer
Segfault in string hexifier
Enabled skipped cleanup scripts
Unbalanced { segfaults

** Removed
Removed bootstrap process as it belongs in mescc-tools-seed instead.
Removed need for fixup_int32
Removed unneeded lines in .gitignore

* 1.4 - 2019-06-23
** Added

** Changed
Tweaked cc_types.c to better match amd64 assembly